--- a/styles.css
+++ b/styles.css
@@ -1499,18 +1499,36 @@ section + section {
 /* hide second project-sentence at lower screen widths */
 @media only screen and (max-width: 715px) {
   .second-project-sentence {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    background-color: rgb(128, 128, 128, 0.8);
+    position: absolute;
+    /* transition: all 600ms ease-in-out; */
   }
 
   .expand-project-button {
     display: contents;
-    color: purple;
+    color: rgb(149, 29, 149);
   }
 
   .expand-project-button:hover {
-    color: purple;
+    color: rgb(129, 23, 129);
     background-color: grey;
     cursor: pointer;
+  }
+
+  #show-sentence {
+    visibility: visible;
+    opacity: 1;
+    position: static;
+    background-color: transparent;
+  }
+}
+
+/* cannot add transition at max-width 715px because I get an undesirable fade in effect */
+@media only screen and (max-width: 714px) {
+  .second-project-sentence {
+    transition: all 600ms ease-in-out;
   }
 }
 
