--- a/styles.css
+++ b/styles.css
@@ -506,7 +506,7 @@ section + section {
 
 .tech-odd {
   justify-content: flex-start;
-  /*  */
+  /* border: 1px solid red; */
   /* justify-content: flex-end; */
 }
 
@@ -515,6 +515,7 @@ section + section {
   margin-top: 1.1rem;
   margin-top: 0;
   margin-right: 1.1rem;
+  /* border: 1px solid purple; */
   /*   font-size: 1.1rem;
   margin-top: 1rem;
   margin-top: 0;
@@ -1249,6 +1250,50 @@ section + section {
   .links {
     position: static;
     margin-top: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 592px) {
+  .tech-odd > li {
+    margin-right: 3rem;
+  }
+}
+
+@media only screen and (max-width: 527px) {
+  .tech-odd > li {
+    margin-right: 2.65rem;
+  }
+}
+
+@media only screen and (max-width: 471px) {
+  .tech-container {
+    width: 80%;
+  }
+
+  .tech {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    flex-wrap: wrap;
+    list-style: square;
+    /* border: 1px solid purple; */
+    height: 69px;
+  }
+
+  .links {
+    position: static;
+    margin-top: 0.73rem;
+  }
+}
+
+@media only screen and (max-width: 365px) {
+  .tech {
+    height: 106px;
+  }
+
+  .links {
+    position: static;
+    margin-top: 0.77rem;
   }
 }
 
