--- a/styles.css
+++ b/styles.css
@@ -1594,6 +1594,7 @@ section + section {
   .expand-project-button {
     display: contents;
     color: rgb(149, 29, 149);
+    white-space: nowrap;
   }
 
   .expand-project-button:hover {
